--- a/src/BddBundle/Resources/views/Report/edit.html.twig
+++ b/src/BddBundle/Resources/views/Report/edit.html.twig
@@ -10,42 +10,66 @@
 {% block javascripts %}
     <script src="https://cdn.quilljs.com/1.3.5/quill.js"></script>
     <script>
+        var toolbarOptions = [
+            ['bold', 'italic', 'underline', 'blockquote'],
+            [{ 'header': 1 }, { 'header': 2 }],
+            ['link', 'image', 'video'],
+            ['clean']
+        ];
+
         var quill = new Quill('#editor', {
-            theme: 'snow'
+            theme: 'snow',
+            // theme: 'bubble'
+            // placeholder: 'Tell us your story...'
+            modules: {
+                toolbar: toolbarOptions
+            }
         });
     </script>
     {#<script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>#}
-    {#<script>#}
-    {#var editor = new MediumEditor('.editable');#}
-    {#editor.setContent('{{ report.content|raw }}', 0);#}
-    {#var saveContent = function () {#}
-    {#var content = editor.serialize();#}
-    {#var data = {content: content['element-0'].value};#}
-    {#$.ajax({#}
-    {#url: '/en/reports/1/content',#}
-    {#type: "POST",#}
-    {#data: data#}
-    {#}).done(function (data) {#}
-    {#console.log('done');#}
-    {#});#}
-    {#}#}
-    {#</script>#}
+    <script>
+        // var editor = new MediumEditor('.editable');
+        {#editor.setContent('{{ report.content|raw }}', 0);#}
+        var saveContent = function () {
+            // var content = editor.serialize();
+            var content = quill.root.innerHTML;
+            console.log(content);
+            $.ajax({
+                url: '/en/reports/1/content',
+                type: "POST",
+                data: { content }
+            }).done(function (data) {
+                console.log('saved');
+            });
+        }
+    </script>
 {% endblock %}
 
 {% block stylesheets %}
     {#<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css"#}
-    type="text/css" media="screen" charset="utf-8">
+    {#type="text/css" media="screen" charset="utf-8">#}
     {#<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@5.23.3/dist/css/themes/beagle.min.css"#}
-    type="text/css" media="screen" charset="utf-8">
+    {#type="text/css" media="screen" charset="utf-8">#}
     <link href="https://cdn.quilljs.com/1.3.5/quill.snow.css" rel="stylesheet">
+    <style>
+        .content-wrapper {
+            background-color: #FFFFFF;
+        }
+        #editor {
+            border: none!important;
+            padding: 30px;
+        }
+    </style>
 {% endblock %}
 
 {% block body %}
     <div id="editor">
-        <p>Hello World!</p>
-        <p>Some initial <strong>bold</strong> text</p>
-        <p><br></p>
+        {{ report.content|raw }}
     </div>
-    {#<button onclick="saveContent();">Save</button>#}
+    <br/>
+    <button type="button" onclick="saveContent();" class="btn btn-primary">
+        <i class="icon-floppy-disk position-left"></i> Save
+    </button>
+    <button type="button" class="btn btn-success"><i class="icon-arrow-right16 position-left"></i> Save and Publish</button>
     {#{{ form(form) }}#}
 {% endblock %}
