--- a/src/BddBundle/Resources/views/Report/list.html.twig
+++ b/src/BddBundle/Resources/views/Report/list.html.twig
@@ -8,4 +8,54 @@
 {% endblock %}
 
 {% block body %}
+  <div class="row">
+    <div class="col-md-4">
+      {% for report in reports %}
+        <div class="panel panel-flat">
+          <div class="panel-body">
+            <div class="thumb content-group">
+              <img src="assets/images/placeholder.jpg" alt="" class="img-responsive">
+              <div class="caption-overflow">
+                <span>
+                  <a href="blog_single.html" class="btn btn-flat border-white text-white btn-rounded btn-icon"><i
+                        class="icon-arrow-right8"></i>
+                  </a>
+                </span>
+              </div>
+            </div>
+
+            <h5 class="text-semibold mb-5">
+              <a href="{{ path('reports_show', {'id': report.id}) }}" class="text-default">
+                {{ report.title }}
+              </a>
+            </h5>
+
+            <ul class="list-inline list-inline-separate text-muted content-group">
+              <li>{{ report.user.displayName }}</li>
+              <li>July 20th, 2016</li>
+            </ul>
+
+            {{ report.content|striptags|slice(0, 200) }}
+            {% if report.content|length > 200 %}...{% endif %}
+          </div>
+
+          <div class="panel-footer panel-footer-condensed">
+            <div class="heading-elements not-collapsible">
+              <ul class="list-inline list-inline-separate heading-text text-muted">
+                <li>
+                  <i class="icon-heart6 text-size-base text-pink position-left"></i>{{ report.likes|length }}
+                </li>
+                <li>{{ report.viewsNumber }} views</li>
+              </ul>
+
+              <a href="{{ path('reports_show', {'id': report.id}) }}" class="heading-text pull-right">
+                Read more
+                <i class="icon-arrow-right14 position-right"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+  </div>
 {% endblock %}
