--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -18,6 +18,9 @@
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
+      <li class="navbar-text">
+        <span id="editor-saved" class="label bg-success"></span>
+      </li>
       <!-- language switcher -->
       <li class="dropdown language-switch">
         <a class="dropdown-toggle" data-toggle="dropdown">
