--- a/src/BddBundle/Resources/views/Report/new.html.twig
+++ b/src/BddBundle/Resources/views/Report/new.html.twig
@@ -51,17 +51,10 @@
         {{ form_label(form.title, "", {'label_attr': {'class': 'control-label'}}) }}
         {{ form_widget(form.title, {'attr': {'class': 'form-control'}}) }}
       </div>
+
       <div class="form-group">
-        <div class="checkbox">
-          <label>
-            <div class="checker">
-              <span class="checked">
-                  <input type="checkbox" class="styled" checked="checked"/>
-              </span>
-            </div>
-            {{ 'report.form.conditions'|trans }}
-          </label>
-        </div>
+        {{ form_label(form.cover, "", {'label_attr': {'class': 'control-label'}}) }}
+        {{ form_widget(form.cover, {'attr': {'class': 'form-control'}}) }}
       </div>
 
       <div class="text-right">
