--- a/src/BddBundle/Resources/views/Maps/userMap.html.twig
+++ b/src/BddBundle/Resources/views/Maps/userMap.html.twig
@@ -45,12 +45,11 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <select class="form-control" name="filters[averageRating]" onchange="filterData();">
-                                <option value="">{{ 'map_index.filter.averageRating'|trans }}</option>
-                                <option value="1">{{ 'map_index.filter.atleast'|trans }} 1</option>
-                                <option value="2">{{ 'map_index.filter.atleast'|trans }} 2</option>
-                                <option value="3">{{ 'map_index.filter.atleast'|trans }} 3</option>
-                                <option value="4">{{ 'map_index.filter.atleast'|trans }} 4</option>
+                            <select class="form-control" name="filters[score]" onchange="filterData();">
+                                <option value="">{{ 'map_index.filter.score'|trans }}</option>
+                              {% for i in range(10, 90, 10) %}
+                                  <option value="{{ i }}">{{ 'map_index.filter.atleast'|transchoice(i) }}</option>
+                              {% endfor %}
                             </select>
                         </div>
                     </div>
