--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -94,6 +94,13 @@
                 <i class="icon-podium"></i> {{ 'navbar.topcoasters'|trans }}
               </a>
             </li>
+            {% if is_granted('ROLE_PREVIEW_FEATURE') %}
+              <li>
+                <a href="{{ path('me_reports', {'id': app.user.id}) }}">
+                  <i class="icon-location3"></i> {{ 'navbar.report'|trans }}
+                </a>
+              </li>
+            {% endif %}
             <li>
               <a href="{{ path('me_ratings') }}">
                 <i class="icon-stars"></i> {{ 'navbar.rating'|trans }}
