--- a/src/BddBundle/Resources/views/Report/list.html.twig
+++ b/src/BddBundle/Resources/views/Report/list.html.twig
@@ -1,60 +1,23 @@
 {% extends "base.html.twig" %}
 
-{% set title = 'report.new.title'|trans %}
+{% set title = 'report.list.title'|trans %}
 {% block title %}{{ title }}{% endblock %}
-
-{% block header %}
-  <meta name="description" content="{{ 'report.new.description'|trans }}"/>
-{% endblock %}
 
 {% block body %}
   <div class="row">
     <div class="col-md-4">
-      {% for report in reports %}
-        <div class="panel panel-flat">
-          <div class="panel-body">
-            <div class="thumb content-group">
-              <img src="{{ report.cover | imagine_filter('report_list') }}" alt="" class="img-responsive">
-              <div class="caption-overflow">
-                <span>
-                  <a href="blog_single.html" class="btn btn-flat border-white text-white btn-rounded btn-icon"><i
-                        class="icon-arrow-right8"></i>
-                  </a>
-                </span>
-              </div>
-            </div>
-
-            <h5 class="text-semibold mb-5">
-              <a href="{{ path('reports_show', {'id': report.id, 'decorativeSlug': report.slug}) }}" class="text-default">
-                {{ report.title }}
-              </a>
-            </h5>
-
-            <ul class="list-inline list-inline-separate text-muted content-group">
-              <li>{{ report.user.displayName }}</li>
-              <li>July 20th, 2016</li>
-            </ul>
-
-            {{ report.content|striptags|slice(0, 200) }}
-            {% if report.content|length > 200 %}...{% endif %}
-          </div>
-
-          <div class="panel-footer panel-footer-condensed">
-            <div class="heading-elements not-collapsible">
-              <ul class="list-inline list-inline-separate heading-text text-muted">
-                <li>
-                  <i class="icon-heart6 text-size-base text-pink position-left"></i>{{ report.likes|length }}
-                </li>
-                <li>{{ report.viewsNumber }} views</li>
-              </ul>
-
-              <a href="{{ path('reports_show', {'id': report.id, 'decorativeSlug': report.slug}) }}" class="heading-text pull-right">
-                Read more
-                <i class="icon-arrow-right14 position-right"></i>
-              </a>
-            </div>
-          </div>
-        </div>
+      {% for key, report in reports if key in [0,3,6] %}
+        {% include 'BddBundle:Report:panel_tr.html.twig' with {'report': report} only %}
+      {% endfor %}
+    </div>
+    <div class="col-md-4">
+      {% for key, report in reports if key in [1,4,7] %}
+        {% include 'BddBundle:Report:panel_tr.html.twig' with {'report': report} only %}
+      {% endfor %}
+    </div>
+    <div class="col-md-4">
+      {% for key, report in reports if key in [2,5,8] %}
+        {% include 'BddBundle:Report:panel_tr.html.twig' with {'report': report} only %}
       {% endfor %}
     </div>
   </div>
