--- a/src/BddBundle/Resources/views/Report/write.html.twig
+++ b/src/BddBundle/Resources/views/Report/write.html.twig
@@ -1,11 +1,7 @@
 {% extends "base.html.twig" %}
 
-{% set title = 'coaster_ranking.title'|trans %}
+{% set title = 'report.write.title'|trans %}
 {% block title %}{{ title }}{% endblock %}
-
-{% block header %}
-  <meta name="description" content="{{ 'coaster_ranking.description'|trans }}"/>
-{% endblock %}
 
 {% block javascripts %}
   <script src="https://cdn.quilljs.com/1.3.5/quill.js"></script>
@@ -55,7 +51,8 @@
           fd.append('image', file);
 
           const xhr = new XMLHttpRequest();
-          xhr.open('POST', 'http://localhost:8000/fr/reports/upload', true);
+          const url = Routing.generate('reports_upload');
+          xhr.open('POST', url, true);
           xhr.onload = () => {
               if (xhr.status === 200) {
                   const url = JSON.parse(xhr.responseText).url;
@@ -163,13 +160,11 @@
 
 {% block body %}
   <div id="editor">
-    {{ report.content|raw }}
+    {{ report.content|raw|default('Once upon a time...') }}
   </div>
   <br/>
   <button type="button" onclick="saveContent();" class="btn btn-primary">
     <i class="icon-floppy-disk position-left"></i> Save
-  </button>
-  <button type="button" class="btn btn-success"><i class="icon-arrow-right16 position-left"></i> Save and Publish
   </button>
   {#{{ form(form) }}#}
 {% endblock %}
