--- a/src/BddBundle/Resources/views/Profile/reports.html.twig
+++ b/src/BddBundle/Resources/views/Profile/reports.html.twig
@@ -35,7 +35,7 @@
       <li class="media panel panel-body stack-media-on-mobile">
         <div class="media-left">
           <img src="{{ asset(report.cover | imagine_filter('report_thumb')) }}" class="img-rounded"
-               style="width:150px;" alt="El Toro">
+               style="width:150px;" alt="{{ report.title }}">
         </div>
 
         <div class="media-body">
