--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -98,7 +98,7 @@
             </li>
             {% if is_granted('ROLE_PREVIEW_FEATURE') %}
               <li>
-                <a href="{{ path('me_reports', {'id': app.user.id}) }}">
+                <a href="{{ path('me_reports') }}">
                   <i class="icon-location3"></i> {{ 'navbar.report'|trans }}
                 </a>
               </li>
