fix bug image banner

--- a/src/BddBundle/Resources/views/Profile/me.html.twig
+++ b/src/BddBundle/Resources/views/Profile/me.html.twig
@@ -81,7 +81,7 @@
                 <small class="display-block">{{ 'me.banner.text'|trans }}</small>
               </h4>
               <div class="text-center content-group">
-                <img src="{{ asset('images/banners/' ~ user.id ~ '.png') }}"/>
+                <img src="{{ asset('images/banners/' ~ user.id ~ '.png') }}" class="img-responsive"/>
               </div>
               <div class="col-sm-12 text-right">
                 <ul class="list-inline no-margin-bottom">
