--- a/src/BddBundle/Resources/views/Profile/me.html.twig
+++ b/src/BddBundle/Resources/views/Profile/me.html.twig
@@ -73,7 +73,10 @@
     <div class="col-sm-9">
       <div class="row">
         <div class="col-sm-12">
-
+          <!-- stats -->
+          {% include 'BddBundle:Profile:user_stats.html.twig' with {'stats': stats} only %}
+          <!-- stats -->
+          <!-- banner -->
           <div class="panel">
             <div class="panel-body">
               <h4 class="content-group-lg">
@@ -103,13 +106,12 @@
               </div>
             </div>
           </div>
-
+          <!-- banner -->
           <!-- badges -->
           <div class="panel panel-flat">
             <div class="panel-heading">
               <h3 class="panel-title">{{ 'me.badge'|trans }}</h3>
             </div>
-
             <div class="panel-body">
               <div class="row">
                 <div class="col-md-3 col-sm-6 text-center" style="margin-bottom: 40px;">
