--- a/src/BddBundle/Resources/views/Profile/public.html.twig
+++ b/src/BddBundle/Resources/views/Profile/public.html.twig
@@ -46,6 +46,9 @@
     <div class="col-sm-9">
       <div class="row">
         <div class="col-sm-12">
+          <!-- stats -->
+          {% include 'BddBundle:Profile:user_stats.html.twig' with {'stats': stats} only %}
+          <!-- stats -->
           <!-- badges -->
           <div class="panel panel-flat">
             <div class="panel-heading">
